2021-05-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Code clenaup.

2021-05-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3223.c:
	  Fix bug #3223.

2021-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/main.c,
	  doc/sdccman.lyx,
	  .version,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/tests/z88dk_callee.c:
	  __z88dk_callee support for stm8.

2021-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  doc/sdccman.lyx,
	  .version,
	  support/regression/tests/z88dk.c,
	  support/regression/tests/z88dk_callee.c:
	  Implement __z88dk_callee support on callee side.

2021-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Caching of floating literals.

2021-05-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3215.c:
	  Fix condition for skipping test on host.
	* src/z80/gen.c:
	  Improve loading of immediate into register pair.

2021-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Another fix for #3220.

2021-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve handling of 32-Bit variables.

2021-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Do not use double push / pop for 16-bit load when optimizing for speed.

2021-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve ldir assignment heuristic for r3ka and ez80_z80: Fix bug #3220.

2021-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Small wide improvements.

2021-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3217.
	* src/z80/peep.c:
	  Fix instruction size for or hl, de and and hl, de.

2021-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a --reserve-regs-iy bug.

2021-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_mullong.c,
	  src/z80/main.c,
	  src/SDCCopt.c: