@@ -1,3 +1,8 @@
+2021-05-07 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/ports/*/spec.mk:
+	  Run regression tests without profile info to allow tests of calling convention with return vlues in a.
+
 2021-05-04 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
